// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Results Screen ResultsListItem Component matches to the snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "marginBottom": 24,
      "marginTop": 24,
    }
  }
>
  <Themed.Icon
    color="#2FA83E"
    iconStyle={
      Object {
        "marginRight": 18,
      }
    }
    name="check"
    size={39}
  />
  <View
    style={
      Object {
        "flexDirection": "column",
        "flexShrink": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#474D54",
          "fontSize": 33,
        }
      }
    >
      Unturned originally started as a Roblox game.
    </Text>
  </View>
</View>
`;

exports[`Results Screen ResultsListItem Component matches to the snapshot 2`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "marginBottom": 24,
      "marginTop": 24,
    }
  }
>
  <Themed.Icon
    color="#CD0720"
    iconStyle={
      Object {
        "marginRight": 18,
      }
    }
    name="close"
    size={39}
  />
  <View
    style={
      Object {
        "flexDirection": "column",
        "flexShrink": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#474D54",
          "fontSize": 33,
        }
      }
    >
      Unturned originally started as a Roblox game.
    </Text>
    <Text
      style={
        Object {
          "color": "#2FA83E",
          "fontSize": 27,
        }
      }
      testID="results_correct_answer"
    >
      Correct answer: True
    </Text>
  </View>
</View>
`;
